# ADD

./: .gitignore  01-principles.md  02-the-flow.md  03-step-1-specify.md  04-step-2-scenarios.md  05-step-3-contract.md  06-step-4-tests.md  07-step-5-build.md  08-step-6-verify.md  09-the-loop.md  10-setup-and-stages.md  11-governance.md  12-roles.md  14-foundation.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING-STARTED.md  LICENSE  README.md  RELEASES.md  RELEASING.md  SECURITY.md  appendix-a-templates.md  appendix-b-prompts.md  appendix-c-glossary.md  appendix-d-worked-example.md  appendix-e-checklists.md  appendix-f-requirements-matrix.md  blog-fast-waste-add-fixes-ai-era-sdlc.md  case-study-ai-proxy-add-in-production.md
add-method/: .npmignore  CHANGELOG.md  GETTING-STARTED.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml
add-method/.claude-plugin/: plugin.json
add-method/diagrams/: CHECKLIST.md  README.md  prompt-competencies.txt  prompt-flow.txt  prompt-foundation.txt  prompt-hierarchy.txt
add-method/docs/: 01-principles.md  02-the-flow.md  03-step-1-specify.md  04-step-2-scenarios.md  06-step-4-tests.md  08-step-6-verify.md  09-the-loop.md  10-setup-and-stages.md  11-governance.md  13-adoption.md  14-foundation.md  15-foundations-and-lineage.md  README.md  appendix-b-prompts.md  appendix-c-glossary.md  appendix-e-checklists.md  appendix-f-requirements-matrix.md
add-method/scripts/: prepare_bundle.py
add-method/tooling/: SEMANTIC_INVENTORY.md  WORDING_RUBRIC.md  add.py  engine_pin.py  md_section.py  pty_clack.py  semantic_inventory.py  test_active_accessors.py  test_actor_identity.py  (+175 more)
(+504 files in other folders)
